<resources>
    <string name="app_name">Hoist</string>
    <string name="add_workout">Add Workout</string>
    <string name="set_alert">Set Alerts</string>
    <string name="home">Home</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="close">Close</string>

    fragment_home
    <string name="gotoWorkoutButton">Workouts</string>
    <string name="gotoEmailButton">SendEmail</string>

    add_workout
    <string name="addWOHeader">Add an Exercise</string>
    <string name="submit">Submit Workout</string>
    <string name="addWorkoutValName">Name your workout</string>
    <string name="addWorkoutValExercise">Exercise Name</string>
    <string name="addWorkoutValWeight">Weight</string>
    <string name="addWorkoutValReps">Reps</string>


</resources>
