<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setAlarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/set_alert"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/sundayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />

    <CheckBox
        android:id="@+id/mondayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/tuesdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/wednesdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/thursdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/fridayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/saturdayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />
</LinearLayout>