<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_alert"
        android:orderInCategory="100"
        android:title="@string/set_alert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="Logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_workout"
        android:orderInCategory="200"
        android:title="@string/add_workout"
        app:showAsAction="never" />
</menu>