<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addEButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addWOHeader" />

    <Button
        android:id="@+id/submitWButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/woName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/addWorkoutValName" />

    <LinearLayout
        android:id="@+id/exercise_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>